--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
+      var socket = io('https://anontalk.cyclic.app');
 
       var messages = document.getElementById('messages');
       var form = document.getElementById('form');
